INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIRS} )
SET(TARGET_LIBRARIES_VARS OSG_LIBRARY OSGDB_LIBRARY OSGUTIL_LIBRARY OSGVIEWER_LIBRARY OPENTHREADS_LIBRARY)
SET(TARGET_SRC osgearth_glsl300es.cpp)
SET(TARGET_H egl_gw.h)

#set_property(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 1)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}) 
  
#### end var setup  ###
SETUP_APPLICATION(osgearth_glsl300es)

target_link_libraries(application_osgearth_glsl300es ${EGL_ANGLE_LIBRARIES})
